--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     ],
     "require": {
         "longman/telegram-bot": "*",
-        "php-telegram-bot/telegram-bot-manager": "^1.7"
+        "php-telegram-bot/telegram-bot-manager": "^1.7",
+        "monolog/monolog": "^2.3"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.2",
