Add HighScoreHandler and update related js section code

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require": {
         "longman/telegram-bot": "*",
         "php-telegram-bot/telegram-bot-manager": "^1.7",
-        "monolog/monolog": "^2.3"
+        "monolog/monolog": "^2.3",
+        "ext-json": "^1.7"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.2",
