--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "longman/telegram-bot": "*",
         "php-telegram-bot/telegram-bot-manager": "^1.7",
         "monolog/monolog": "^2.3",
-        "ext-json": "^1.7"
+        "ext-json": "^1.7",
+        "ext-curl": "^7.3"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.2",
