Add ext-pdo to composer.json

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "php-telegram-bot/telegram-bot-manager": "^1.7",
         "monolog/monolog": "^2.3",
         "ext-json": "^1.7",
-        "ext-curl": "^7.3"
+        "ext-curl": "^7.3",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "php-parallel-lint/php-parallel-lint": "^1.2",
